more structure for the contrib area
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@1285 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/README
+++ b/contrib/README
@@ -3,6 +3,8 @@ Some of this material may eventually end up in the LaTeXML distribution if it is
 
 Subdirectories: 
 
-package: LaTeXML bindings of existing or new packages with LaTeXML bindings 
-xsl:     XSLT style sheets for use with LaTeXML
-css:     CSS style sheets for LaTeXML-generated documents
+package:   LaTeXML bindings of existing or new packages with LaTeXML bindings. 
+bindings:  LaTeXML bindings for existing LaTeX packages. 
+doc: 	   documentation for the bindings.
+xsl:       XSLT style sheets for use with LaTeXML.
+css:       CSS style sheets for LaTeXML-generated documents.
