more infrastructure for expression entries
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2163 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -2,9 +2,10 @@
 Some intro text?\\
 
 \begin{entries}{Differential Geometry Notations}{study:diffgeometry}
-\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}
-\entry{$\CZ$}{self-dual lattice}{atom abbreviation}
-\entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}
-
+\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}{?}
+\entry{$\CZ$}{self-dual lattice}{atom abbreviation}{?}
+\entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}{?}
+\entry{$\lag$}{Lagrangian Grassmannian}{circumfix constructor}{?}
+\entry{$\flag$}{4-fold covering space}{complex object, applicative constructor}{?}
 
 \end{entries}
