tweaking layout again, first 15 entries finished
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2164 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -1,11 +1,51 @@
+%Commands specific for file "torus" 
+\newcommand{\CLh}{\hat{\mathcal L}}
+\newcommand{\CLP}{\mathcal{L}_{\mathcal{P}}}
+\newcommand{\CHP}{\mathcal{H}_{\mathcal{P}}}
+\newcommand{\deph}{ {\left| \text{Det} \,{\mathcal P} \right|}^{\frac{1}{2}} }
+\newcommand{\dephs}{ {\left| \text{Det} \,{\mathcal P}^{*} \right|}^{\frac{1}{2}} }
+\newcommand{\lag}{Lag (\mathcal V)}
+\newcommand{\tlag}{\widetilde{Lag}(\mathcal V)}
+\newcommand{\flag}{Lag_4 (\mathcal V)}
+
 \subsection{Differential Geometry}
 Some intro text?\\
 
-\begin{entries}{Differential Geometry Notations}{study:diffgeometry}
-\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}{?}
-\entry{$\CZ$}{self-dual lattice}{atom abbreviation}{?}
-\entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}{?}
-\entry{$\lag$}{Lagrangian Grassmannian}{circumfix constructor}{?}
-\entry{$\flag$}{4-fold covering space}{complex object, applicative constructor}{?}
-
+\begin{entries}{Differential Geometry Notations, Part 1}{study:diffgeometry1}
+\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}{[Train1]}
+\entry{$\CZ$}{self-dual lattice}{atom abbreviation}{[Train1]}
+\entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}{[Train1]}
+\entry{$\lag$}{Lagrangian Grassmannian}{circumfix constructor}{[Train1]}
+\entry{$\flag$}{4-fold covering space}{applicative constructor}{[Train1]}
+\entry{$\CM_{\Si}$}{moduli space}{scripted constructor}{[Train1]}
+\entry{$\Si$}{Riemann surface}{atom variable}{[Train1]}
+\entry{$H^1(\Si;\BR)$}{chomology space}{applicative constructor}{[Train1]}
+\entry{$H^1(\Si;\BR)/ H^1(\Si;\BZ)$}{torus}{applicative constructor}{[Train1]}
+\entry{$(M , \om)$}{symplectic manifold}{circumfix constructor}{[Train1]}
+\entry{$f \in \CC^{\infty} (M)$}{smooth function}{modified atom}{[Train1]}
+\entry{$ X_{f} $}{field}{scripted constructor}{[Train1]}
+\entry{$\contrac$}{interior product}{complex infix operator}{Formed via $\backslash$mathop in {\TeX}, [Train1]}
+\entry{$[ \om ] \in H^{2}(M; \BR)$}{cohomology class}{modified complex object}{[Train1]}
+\entry{$( \cdot , \cdot )$ }{hermitian metric}{notation pattern}{[Train1]}
 \end{entries}
+
+\begin{entries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\end{entries}
+
+\ednote{Complex named enttity: ``$U(⁢1)$ Chern-Simons gauge theory.''}
+\newpage
