tweaking layout again, first 15 entries finished
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2165 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -30,10 +30,10 @@ Some intro text?\\
 \end{entries}
 
 \begin{entries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
+\entry{$-2 \pi \ti \, \om$}{curvature of $\na$}{arithmetic expression}{[Train1]}
+\entry{$(\CL , \na)$}{prequantum line bundle}{circumfix constructor}{[Train1]}
+\entry{$U \subset M$}{open subset}{modified atom}{[Train1]}
+\entry{$\CL \bigr|_{U}$}{restricted line bundle}{modified atom}{postfix restriction with $\bigr|$[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
