30 expressions recorded from Train1
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2166 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -29,11 +29,31 @@ Some intro text?\\
 \entry{$( \cdot , \cdot )$ }{hermitian metric}{notation pattern}{[Train1]}
 \end{entries}
 
-\begin{entries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
+\begin{nextentries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
 \entry{$-2 \pi \ti \, \om$}{curvature of $\na$}{arithmetic expression}{[Train1]}
 \entry{$(\CL , \na)$}{prequantum line bundle}{circumfix constructor}{[Train1]}
 \entry{$U \subset M$}{open subset}{modified atom}{[Train1]}
-\entry{$\CL \bigr|_{U}$}{restricted line bundle}{modified atom}{postfix restriction with $\bigr|$[Train1]}
+\entry{$\CL \bigr|_{U}$}{restricted line bundle}{modified atom}{postfix restriction via ``$\bigr|_{U}$'', [Train1]}
+\entry{$s \in \Ga(U ;\CL)$}{nonzero section}{modified atom}{[Train1]}
+\entry{$\na s = - 2 \pi \ti \, \theta \, s$}{equation}{relation}{[Train1]}
+\entry{$\om \bigr|_{U} = d \theta$}{equation}{relation}{[Train1]}
+\entry{$T_{x} M$}{bundle}{applicative constructor}{invisible infix bundle-forming operator, [Train1]}
+\entry{$\om \bigr|_{\CP_{x}} \equiv 0$}{equivalence}{relation}{[Train1]}
+\entry{$\dim \CP_{x} = \frac{1}{2} \, \dim T_{x} M$}{equality}{relation}{$\dim$ has lower precedence than invisible bundle-formation, [Train1]}
+\entry{$ [X,Y] \in \CX_{\CP}(M)$}{commutator is in set}{relation}{used as verb phrase in sentence, [Train1]}
+\entry{$\na^{\CP}$}{covariant differentiation}{scripted prefix op}{big op?, [Train1]}
+\entry{\parbox{3cm}{\scriptsize\begin{alignat*}{3}
+  \na^{\CP} :  \CX_{\CP}(M)  &\times \CX_{\CP}(M) & \lra &  \;   \CX_{\CP}(M) \\
+     ( X  & , Y ) & \longmapsto & \; \na^{\CP}_X \, Y  \, ,\notag
+\end{alignat*}}}{domain specification}{typing modifier}{alignment splits type statement, trailing comma [Train1]}
+\entry{$(\na^{\CP}_X \, Y) \, \contrac \, \om = X \, \contrac \, d \, (Y \, \contrac \, \om) \, .$}%
+{definitional assignment}{relation}{trailing dot, [Train1]}
+\entry{$\Pi_{\CP} : M \ra M/ \CP$}{canonical projection map}{typed modifier}{[Train1]}
+\end{nextentries}
+
+% % Extension template
+\begin{nextentries}{Differential Geometry Notations, Part 3}{study:diffgeometry3}
+\entry{$T^g$}{$g$-dimensional torus}{complex object}{script means dimensionality[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
@@ -45,7 +65,30 @@ Some intro text?\\
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
-\end{entries}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\entry{}{}{}{[Train1]}
+\end{nextentries}
+
+% % Extension template
+% \begin{nextentries}{Differential Geometry Notations, Part 3}{study:diffgeometry3}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \entry{}{}{}{[Train1]}
+% \end{nextentries}
+
 
 \ednote{Complex named enttity: ``$U(⁢1)$ Chern-Simons gauge theory.''}
 \newpage
