30 expressions recorded from Train1
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2167 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -54,7 +54,7 @@ Some intro text?\\
 % % Extension template
 \begin{nextentries}{Differential Geometry Notations, Part 3}{study:diffgeometry3}
 \entry{$T^g$}{$g$-dimensional torus}{complex object}{script means dimensionality[Train1]}
-\entry{}{}{}{[Train1]}
+\entry{ $q_1, \dots ,q_g$}{coordinate functions}{enumerative sequence}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
