progress of the day
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2168 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -26,11 +26,11 @@ Some intro text?\\
 \entry{$ X_{f} $}{field}{scripted constructor}{[Train1]}
 \entry{$\contrac$}{interior product}{complex infix operator}{Formed via $\backslash$mathop in {\TeX}, [Train1]}
 \entry{$[ \om ] \in H^{2}(M; \BR)$}{cohomology class}{modified complex object}{[Train1]}
-\entry{$( \cdot , \cdot )$ }{hermitian metric}{notation pattern}{[Train1]}
+\entry{$( \cdot , \cdot )$ }{notation patter, hermitian metric}{tuple}{[Train1]}
 \end{entries}
 
 \begin{nextentries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
-\entry{$-2 \pi \ti \, \om$}{curvature of $\na$}{arithmetic expression}{[Train1]}
+\entry{$-2 \pi \ti \, \om$}{complex number}{arithmetic expression}{[Train1]}
 \entry{$(\CL , \na)$}{prequantum line bundle}{circumfix constructor}{[Train1]}
 \entry{$U \subset M$}{open subset}{modified atom}{[Train1]}
 \entry{$\CL \bigr|_{U}$}{restricted line bundle}{modified atom}{postfix restriction via ``$\bigr|_{U}$'', [Train1]}
@@ -55,10 +55,11 @@ Some intro text?\\
 \begin{nextentries}{Differential Geometry Notations, Part 3}{study:diffgeometry3}
 \entry{$T^g$}{$g$-dimensional torus}{complex object}{script means dimensionality[Train1]}
 \entry{ $q_1, \dots ,q_g$}{coordinate functions}{enumerative sequence}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
+\entry{ $X_{q_1}, \dots ,X_{q_g}$}{Hamiltonian vector fields}{enumerative sequence}{[Train1]}
+\entry{$q_1 \circ \Pi_{\CP}, \dots, q_g \circ \Pi_{\CP}$}{functions}{enumerative sequence}{sequence elements are applicative objects, [Train1]}
+\entry{$\ga_1(\La) , \dots , \ga_g(\La)$}{basis for a homology group}{enumerative sequence}{[Train1]}
+\entry{$j_{i}(y) = \int\limits_{\ga_{i}(\La)} \theta, \text{ where } y = \Pi_{\CP}(\La) \, ,$}%
+{definitional assignment}{relation}{integral has no binder, nat. lang. modifier, punctuation, [Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
@@ -92,3 +93,6 @@ Some intro text?\\
 
 \ednote{Complex named enttity: ``$U(⁢1)$ Chern-Simons gauge theory.''}
 \newpage
+
+\ednote{Scripts give you new names or new objects}
+\ednote{Prime scripts can be used for both naming and operating}
