--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -47,7 +47,7 @@ Some intro text?\\
      ( X  & , Y ) & \longmapsto & \; \na^{\CP}_X \, Y  \, ,\notag
 \end{alignat*}}}{domain specification}{typing modifier}{alignment splits type statement, trailing comma [Train1]}
 \entry{$(\na^{\CP}_X \, Y) \, \contrac \, \om = X \, \contrac \, d \, (Y \, \contrac \, \om) \, .$}%
-{definitional assignment}{relation}{trailing dot, [Train1]}
+{definitional assignment}{infix relation}{trailing dot, [Train1]}
 \entry{$\Pi_{\CP} : M \ra M/ \CP$}{canonical projection map}{typed modifier}{[Train1]}
 \end{nextentries}
 
@@ -59,10 +59,48 @@ Some intro text?\\
 \entry{$q_1 \circ \Pi_{\CP}, \dots, q_g \circ \Pi_{\CP}$}{functions}{enumerative sequence}{sequence elements are applicative objects, [Train1]}
 \entry{$\ga_1(\La) , \dots , \ga_g(\La)$}{basis for a homology group}{enumerative sequence}{[Train1]}
 \entry{$j_{i}(y) = \int\limits_{\ga_{i}(\La)} \theta, \text{ where } y = \Pi_{\CP}(\La) \, ,$}%
-{definitional assignment}{relation}{integral has no binder, nat. lang. modifier, punctuation, [Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
-\entry{}{}{}{[Train1]}
+{definitional assignment}{infix relation}{integral has no binder, nat. lang. modifier, punctuation, [Train1]}
+\entry{ $\text{Det} \, \BV = \overset{n}{\wedge} \BV$}{definitional assignment}{infix relation}{$n$-ary wedge?, hidden binder on $\BV$, [Train1]}
+\entry{$\ka \, (X_{j_{1}} \bigr|_{\La} , \dots , X_{j_{g}} \bigr|_{\La}) = 1 \, .$}{canonically defined density}{infix relation}{bars as postfix, within a sequence [Train1]}
+\entry{\footnotesize$(\na^{\CP}_W \, \nu) (X_1^* , \dots , X_g^*)  \, = \, W( \, \nu(X_1^* , \dots , X_g^*) \, )  \, ,$}%
+{definitional assignment\footnote{covariant derivative}}{infix relation}{applied function is fenced, [Train1]}
+\entry{\tiny $0 \lra  \Om^0_{\CP}(\CLP) \overset{\na^{\CP}}{\lra}  \Om^1_{\CP}(\CLP) \overset{\na^{\CP}}{\lra} \cdots \overset{\na^{\CP}}{\lra} \Om^g_{\CP}(\CLP) \lra 0$}{complex}{type?}{arrows as transitions, ellipsis, [Train1]}
+\entry{$\overset{k}{\wedge} \CP^* \otimes \CLP$}{line bundle}{applicative constructor?}{which operator binds first?,[Train1]}
+\entry{$c_{\La} = \int_{\La} f_{\La} \hat{\ka}$}{definitional assignment}{infix relation}{bound variable in integral subscript[Train1]}
+\entry{\footnotesize $ H^g (M;\CP,\CLP)\, \cong \, \underset{\La \subset
+\mathcal{BS}_{\CP}}{\oplus} \, S_{\La}$}{natural isomorphism}{infix relation}{$n$-ary $\oplus$, congruence [Train1]}
+\entry{$(s, s')$}{function on $\La$}{circumfix constructor}{shorthand constructor for a function[Train1]}
+\entry{$\int\limits_{\La} (s , s') \, \mu \ast \mu'$}{integral application}{prefix application}{binder in subscript, infix operator ``$\ast$'' binds stronger than invisible apply [Train1]}
+\end{nextentries}
+
+\begin{nextentries}{Differential Geometry Notations, Part 4}{study:diffgeometry4}
+\entry{$\langle \langle \cdot , \cdot \rangle \rangle : \CH_{\CP_2} \times \CH_{\CP_1} \ra \BC $}{sesquilinear pairing pattern}{type modifier}{operator pattern, along with operator type [Train1]}
+\entry{ $\om \, = \, \sum_{i = 1}^{g} d p^{i} \wedge d q^{i}$}{symplectic form}{infix relation}{sum over wedge applications, [Train1]}
+\entry{$p^{i} =$ constant}{}{}{bad text/math modality, RHS outside of math[Train1]}
+\entry{\footnotesize $W \cdot (X, \la) \, = \, (X+W, \ep(W) \: \te^{\pi i  k \om(W,X)}  \, \la ) , $}{$\CZ$-action definition}{infix relation}{defines operator $\cdot$, arguments quantified via NL following the math expression,[Train1]}
+\entry{$l \, (l \leq g)$}{dimension}{modified object}{invisible modifier, using fenced relation,[Train1]}
+\entry{$( W_{1} , \dots , W_{g} ; W_{1}^{\perp} , \dots , W_{g}^{\perp} )$}{symplectic basis}{circumfix constructor}{distinction between commas and semicolon, [Train1]}
+\entry{$i=1, \dots , g$}{definitional range}{infix relation}{defined to be a sequence? or modifying restriction over a range?, [Train1]}
+\entry{$X \in \CV, \,W \in \CP$}{conjunction of statements}{sequence of relations}{comma denotes NL ``and'' between two relational statements,[Train1]}
+\entry{$k \, \om(W_{i} , X) \in \BZ , \qquad i = 1, \dots , g \, ,$}{statement}{modified relation}{four scopes of commas, also hinted by spacing, [Train1]}
+\entry{$q_{i} \pmod{k}$}{modulo}{invisible modifier}{fenced modifier argument, prefix mod?,[Train1]}
+\entry{\scriptsize $\La_{\bq = (q_{1}, \dots ,q_{g})} : \, k \, \om(W_{i}, X) \, = \, q_{i} \pmod{k} , \, i=1, \dots ,g .$}{orbit description}{infix relation}{complex expression, rich in phenomena,[Train1]}
+\entry{\scriptsize $\hat{\La}_{\bq , \bl} \, = \, \{ X \in \CV \mid \, k \, \om(W_{i}, X) = q_{i} + k l_{i} , \; i=1, \dots ,g \} .$}{definitional assignment}{infix relation}{modified relation!,[Train1]}
+\entry{$\{ \si_{\bq} = s_{\bq} \otimes \de_{\bq} \}_{\bq \in  (\BZ/ k \BZ)^g}$}{standard unitary basis if $\CHP$}{set constructor}{relational modifier to set constructor argument, subscripted set range, [Train1]}
+\entry{$k  \om( W_i, T_j) \, = \, \de_{ij} \qquad i,j=h+1, \dots ,g \notag $}{statement}{infix relation}{spaces determine equality scopes, act as conjunctions; equality on sequence and range[Train1]}
+\entry{$[\bl ] = [(l_{1}, \dots , l_{g})] \in \BZ^{g} / \om(2,1) \BZ^{g}$}{equivalence class}{doubly modified object}{two relations modify $[\bl]$, chained modifying? or nested modifying?[Train1]}
+\end{nextentries}
+
+\begin{nextentries}{Differential Geometry Notations, Part 5}{study:diffgeometry5}
+\entry{${ ^t \bq_1}$}{?}{scripted atom}{prescript $t$, but what does it mean?, [Train1]}
+\entry{\footnotesize$\displaystyle\sum_{ \displaystyle\substack{\bq_2 \\ 0 \leq q_{2i} \leq k \left| \det \om(2,1) \right|-1 }} \:  \sum_{[\bl],[\bl']} \: \ldots $}{nested summation}{prefix operator apply}{stacked subscripts, and subscript sequence[Train1]}
+\entry{$\oplus_{i=1}^{g} \BZ W_{1i} \oplus \oplus_{i=1}^{g} \BZ W_{1i}^{\perp}$}{?}{infix apply}{mixing prefix $n$-ary $\oplus$ with infix binary $\oplus$.[Train1]}
+\entry{ $\tau : \lag \times \lag \times \lag \ra \BZ$}{function declaration}{typed modifier}{$\times$ is weaker than invisible application, when in a typing context?, [Train1]}
+\entry{$L_1, L_2, L_3, L_4 \in \lag$}{set membership}{infix relation}{multirelation? membership holds for each of the sequence entries on LHS, [Train1]}
+\entry{$r \equiv \pmod{q}$}{equivalence}{infix relation}{second-order relation, $r$ is used as a superscript notation for modulo apply, [Train1]}
+\entry{$U_{\CP}(b) = F_{\CP, b \CP} \circ b \, : \, \CHP \ra \CHP$}{unitary operator definition}{typed modifier}{modifier for assignment, followed by modifier for type, [Train1]}
+\entry{ $( W_i' = b W_i \, ; W_i^{'\perp} = b W_i^{\perp} )$ }{symplectic basis}{circumfix constructor}{two modified arguments to the main constructor, [Train1]}
+\entry{\scriptsize$(x,c) \in \CT \times Sp(2g,\BR) \overset{b}{\lra} (b(x), bc) \in \CT \times Sp(2g,\BR)$}{left action}{arrow transition}{$\times$ is not used in a typing sense, but in a cross-product sense, inducing a different arrow interplay [Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
 \entry{}{}{}{[Train1]}
@@ -71,8 +109,10 @@ Some intro text?\\
 \entry{}{}{}{[Train1]}
 \end{nextentries}
 
+\ednote{more on $\pmod{x}$ notations}
+
 % % Extension template
-% \begin{nextentries}{Differential Geometry Notations, Part 3}{study:diffgeometry3}
+% \begin{nextentries}{Differential Geometry Notations, Part 5}{study:diffgeometry5}
 % \entry{}{}{}{[Train1]}
 % \entry{}{}{}{[Train1]}
 % \entry{}{}{}{[Train1]}
