--- a/contrib/package/mathanno/mathanno.sty
+++ b/contrib/package/mathanno/mathanno.sty
@@ -13,14 +13,14 @@
 %%% ENTRIES for expression case study:
 \newenvironment{nextentries}[2]%
 {\begin{table}[hp]\def\capentries{#1}\def\labelentries{#2}%
- \begin{tabular}{|llll|}\hline  & Expression & Meaning & Syntax \\}%
+ \begin{tabular}{|llll|}\hline  & Expression & Denotation & Annotation \\}%
 {\hline\end{tabular}\caption{\capentries}\label{\labelentries}\end{table}}%
 
 \newenvironment{entries}[2]%
 {\setcounter{entryi}{1}\begin{nextentries}{#1}{#2}}
 {\end{nextentries}}
 
-\newcommand\entry[4]{\hline\\[-4mm] {\theentryi\labelentry}\stepcounter{entryi} & #1 & #2 & #3 \\[1.5mm] & \multicolumn{3}{l|}{{\footnotesize\textbf{Discussion:} #4}}\\[1mm]}
+\newcommand\entry[4]{\hline\\[-4mm] {\theentryi\labelentry}\stepcounter{entryi} & #1 & #2 & {\scriptsize#3} \\[1.5mm] & \multicolumn{3}{l|}{{\footnotesize\textbf{Discussion:} #4}}\\[1mm]}
 \endinput
 %%
 %% End of file `mathanno.sty'.
